--- a/modulo_4/exercicios/ex026/mq002/estilos/style.css
+++ b/modulo_4/exercicios/ex026/mq002/estilos/style.css
@@ -1,3 +1,28 @@
 @charset "UTF=8";
 
 /* Configurações Gerais */
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    text-shadow: 3px 3px 0px #192dc0;
+    padding: 10px;
+}
+
+p {
+    color: white;
+    padding: 10px;
+}
