--- a/modulo_4/exercicios/ex026/mq005/estilos/desktop.css
+++ b/modulo_4/exercicios/ex026/mq005/estilos/desktop.css
@@ -1,59 +1,62 @@
 @charset "UTF-8";
 
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-html, body {
-    background-color: rgb(116, 116, 116);
-}
-
-header {
-    background-color: grey;
-}
-
-header h1 {
-    text-align: center;
-    font-size: 1.4em;
-    padding: 20px;
-}
-
-menu {
-    display: block;
-    text-align: left;
-    padding: 10px;
-}
-
-menu > ul {
-    list-style-type: none;
-}
-
-menu > ul > li {
-    display: inline;
-    padding: 11px;
-    background-color: darkslategrey;
-    border-radius: 5px;
-}
-
-menu a {
-    font-size: .85em;
-    text-decoration: none;
-    color: white;
-}
-
-article {
-    width: 800px;
-    background-color: white;
-    margin: 0px auto 10px auto;
-    padding: 15px;
-    padding-top: 10px;
-    border-radius: 0px 0px 10px 10px;
-}
-
-article p {
-    text-indent: 1.5em;
-    text-align: justify;
-    line-height: 1.5em;
+@media screen and (min-width: 992px) and (max-width: 1200px){
+    
+    * {
+        margin: 0px;
+        padding: 0px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    html, body {
+        background-color: rgb(116, 116, 116);
+    }
+    
+    header {
+        background-color: grey;
+    }
+    
+    header h1 {
+        text-align: center;
+        font-size: 1.4em;
+        padding: 20px;
+    }
+    
+    menu {
+        display: block;
+        text-align: left;
+        padding: 10px;
+    }
+    
+    menu > ul {
+        list-style-type: none;
+    }
+    
+    menu > ul > li {
+        display: inline;
+        padding: 11px;
+        background-color: darkslategrey;
+        border-radius: 5px;
+    }
+    
+    menu a {
+        font-size: .85em;
+        text-decoration: none;
+        color: white;
+    }
+    
+    article {
+        width: 800px;
+        background-color: white;
+        margin: 0px auto 10px auto;
+        padding: 15px;
+        padding-top: 10px;
+        border-radius: 0px 0px 10px 10px;
+    }
+    
+    article p {
+        text-indent: 1.5em;
+        text-align: justify;
+        line-height: 1.5em;
+    }
 }
